[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
aho-corasick = "1.1.2"
nom = "7.1.3"
itertools = "0.12.0"
strum = "0.25.0"
strum_macros = "0.25.0"
enumflags2 = "0.7.8"

[dev-dependencies]
test-case = "3.3.1"